fixed some other stuff again.